--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ pillow
 
 numpy==1.26.4
 
-torch==2.1.0
-torchvision==0.16.0
+torch==2.1.0+cpu
+torchvision==0.16.0+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 
 ftfy
 regex
